--- a/src/_posts/2020-02-20-gan-hacking.mdx
+++ b/src/_posts/2020-02-20-gan-hacking.mdx
@@ -9,7 +9,9 @@ I started off in this direction because I was really interested in the abstract 
 
 ![a simualated vacation image produced by a GAN](images/gan-hacking/ganbent/fake_vacation.png)
 
-The limited, square output resolution of 512x512 felt pretty limiting, so I tried collaging the images together:
+The limited, square output resolution of 512x512 felt pretty limiting, so I tried collaging the images together with some clone tool and editing in Photoshop[^2]:
+
+[^2] This image was made with the 256x256 model that was originally on Ganbreeder, which later became Artbreeder.
 
 ![a collage of gan images](images/gan-hacking/ganshups/ganshup2.jpg)
 
@@ -25,7 +27,7 @@ Since BigGAN already doesn't output realistic images, I was more concerned with 
 
 We're going to take the pretrained model (specifically the Generator, discarding the descriminator) of the BigGAN model and do something bit like [circuit-bending](https://en.wikipedia.org/wiki/Circuit_bending), modifying the code that produces an image **without** retraining the network (which is infeasible since the training data is proprietary to Google).
 
-To more easily facilitate modification of the model, we're going to use the [PyTorch version](https://github.com/huggingface/pytorch-pretrained-BigGAN) provided by Huggingface.
+To more easily facilitate modification of the model, we're going to use the [PyTorch version provided by Huggingface](https://github.com/huggingface/pytorch-pretrained-BigGAN).
 
 The first step towards creating a larger image is finding a place within the model where we can replace a lower-resolution feature map with a higher-res map (hopefully subsequent layers will perform roughly the same function as before).
 
@@ -37,13 +39,6 @@ The general structure of BigGAN is as follows (assume 1 image is being generated
   this vector is first embedded to a 128-dimensional space
 
 For example, [0, 0, 1, 0, 0, 0, …] would correspond to class of _great white shark_
-
-Nothing forces this vector to actually be one-hot (ie, have only one entry with a 1 and the rest 0), in fact most of the interesting images on Artbreeder are formed by a weird combination of partial classes.
-
-For example, [this image](https://artbreeder.com/i?k=adf8ce01ceb55400ca688aa0) is 20% greenhouse, 18% web site, 15% band-aid, 11% nipple, 7% cell phone, etc.
-![abstract image](images/gan-hacking/adf8ce01ceb55400ca688aa0.jpeg)
-
-During training, this vector is always one class only, so in-between images can be very glitchy!
 
 Shape: The notation [a, b, c] denotes the the sizes of each dimension in a multi-dimensional array / "Tensor"
 For example, images are typcally stored in [N,C, H, W] format in PyTorch:
@@ -598,3 +593,248 @@ Keep in mind after the combination, the image is processed as if the whole thing
 # Colab Notebook
 
 If you'd like to create your own GAN collages, check out this [colab notebook](https://colab.research.google.com/drive/1C3OyNmkG76MagYt0N0KhR5VMi1xKyfre) with everything you need to get started!
+
+
+<section id="results-tile">
+
+### Combining multiple classes, import from Artbreeder
+
+To generate more interesting images, it helps to explore the full range of class-vector combinations. In the explanation for the class vector above, I omitted the fact that nothing forces this vector to actually be one-hot (ie, have only one entry with a 1 and the rest 0), in fact most of the interesting images on Artbreeder are formed by a weird combination of partial classes.
+
+For example, [this image](https://artbreeder.com/i?k=adf8ce01ceb55400ca688aa0) is 20% greenhouse, 18% web site, 15% band-aid, 11% nipple, 7% cell phone, etc.
+![abstract image](images/gan-hacking/adf8ce01ceb55400ca688aa0.jpeg)
+
+During training, this vector is always one class only, so in-between images can be very glitchy!
+
+Let's explore importing images from Artbreeder so we can have more control over the output by picking exactly each image.
+
+We're going to use [Andy Brock's PyTorch port of BigGAN](https://github.com/ajbrock/BigGAN-PyTorch), which contains code to convert the original weights from TFHub (google's storage) into the right format for PyTorch.
+
+I used a cell in a colab notebook to download the code, save the weights, and generate some test images:
+
+```
+!git clone https://github.com/ajbrock/BigGAN-PyTorch
+!pip install parse
+!cd /content/BigGAN-PyTorch/TFHub/
+!python converter.py -r 512 --batch_size 4 --verbose --generate_samples
+```
+
+
+
+Now we can load the weights and get started (I also copy-pasted the `get_config()` function from `converter.py` into my notebook):
+```python
+import torch
+import torch.nn as nn
+from torchvision.utils import save_image
+import sys
+sys.path.append('/content/BigGAN-PyTorch/')
+import BigGAN
+
+pth_path = '/content/BigGAN-PyTorch/TFHub/pretrained_weights/biggan-512.pth'
+with open(pth_path, mode='rb') as f:
+  print("Loading state_dict")
+  state_dict = torch.load(f)
+  print("Done loading state_dict")
+
+config = get_config(512)
+G = BigGAN.Generator(**config)
+G.load_state_dict(state_dict, strict=False) 
+del state_dict
+```
+
+We need a slightly different generator function due to the original pytorch splitting up the cond_vector into pieces before feeding it into each GenBlock.
+
+Here I adapted the [BigGAN.forward(…) function](https://github.com/ajbrock/BigGAN-PyTorch/blob/master/BigGAN.py#L230) to take a class vector instead of PyTorch Embedding layer, which wants integer indices (since we **do** want inputs with multiple classes active). Thankfully, we can use the same weight matrix transposed with `F.linear` to compute the embedding.
+
+
+```python
+import torch.nn.functional as F
+import torchvision
+
+def gen_hacked(noise_vector, class_vector, truncation,
+               layer_to_hack=1, hack_layer=lambda z: z, use_index=3):
+  with torch.no_grad():
+    # If hierarchical, concatenate zs and ys
+    # we're passing in one-ish-hot vector instead of indices
+    # y = G.shared(class_vector)
+    y = F.linear(class_vector, G.shared.weight.t())
+    zs = torch.split(noise_vector, G.z_chunk_size, 1)
+    z = zs[0]
+  
+    # First linear layer
+    h = G.linear(z)
+    # Reshape
+    h = h.view(h.size(0), -1, G.bottom_width, G.bottom_width)
+    
+    if layer_to_hack == -1:
+      # print(f"Before shape is {h.shape}.")
+      h = hack_layer(h)
+      # print(f"After shape is {h.shape}.")
+
+    # Loop over blocks
+    for index, blocklist in enumerate(G.blocks):
+      n = h.shape[0]
+
+      # Grab the right split (accounting for grid)
+      cond_vector = torch.cat([y, zs[index + 1]], 1)
+      excess_cond = cond_vector.shape[0] // n
+      if excess_cond > 1:
+        cond_input = cond_vector[use_index:use_index+1]
+      else:
+        cond_input = cond_vector
+
+      # Second inner loop in case block has multiple layers
+      for block in blocklist:
+        h = block(h, cond_input)
+      if index == layer_to_hack:
+        # print(f"Before shape is {h.shape}.")
+        h = hack_layer(h)
+        # print(f"After shape is {h.shape}.")
+    
+    # Apply batchnorm-relu-conv-tanh at output
+    h = G.output_layer(h)
+    h = torch.tanh(h)
+    return h
+
+batch_size = 1
+noise_vector = torch.randn(batch_size, G.dim_z).to(device)
+class_vector = torch.zeros(batch_size, 1000, device=device)
+cls_idx = torch.randint(low=0, high=1000, size=(batch_size,), 
+    device=device, dtype=torch.int64, requires_grad=False)
+class_vector[:,cls_idx] = 1
+
+to_pil_image(gen_hacked(noise_vector, class_vector, 1.0).cpu()[0] * 0.5 + 0.5)
+```
+
+Next, we should fetch the images we want from Artbreeder:
+
+```
+import numpy as np
+import re
+import requests
+
+session_cookies = {"connect.sid":	"<INSERT SESSION ID HERE>"}
+
+replace = re.compile("artbreeder.com/i\?")
+
+def info_url(url):
+  return replace.sub("artbreeder.com/info?", url)
+
+def dat_from_url(url):
+  url = info_url(url)
+  try:
+    resp = requests.get(url, cookies=session_cookies)
+    data = resp.json()
+    return data
+  except:
+    print("error loading:", url)
+
+
+def parse_dat(d):
+  class_vector = np.zeros((1, 1000), dtype='float32')
+  for i, amount in d["classes"]:
+    class_vector[0, i] = amount
+  noise_vector = np.array(d["latent"], dtype='float32')[np.newaxis,:]
+  truncation = d["truncation"]
+  return noise_vector, class_vector, truncation
+
+def image_from_dat(d):
+  noise_vector, class_vector, truncation = parse_dat(d)
+  noise_vector = torch.tensor(noise_vector, device=device)
+  class_vector = torch.tensor(class_vector, device=device)
+  images = gen_hacked(noise_vector, class_vector, truncation, -1, lambda z: z)
+  return to_pil_image(torchvision.utils.make_grid(images.cpu()) * 0.5 + 0.5)
+
+image_from_dat(dat_from_url('https://artbreeder.com/i?k=83b5f5830c1ad242c50d'))
+```
+
+Comparing [original](https://artbreeder.com/i?k=83b5f5830c1ad242c50d):
+
+![Original abstract artbreeder image](images/gan-hacking/artbreeder/83b5f5830c1ad242c50d.jpg)
+
+To PyTorch version:
+
+![Original abstract artbreeder image](images/gan-hacking/artbreeder/83b5f5830c1ad242c50d-pytorch.jpg)
+
+Looks close enough!
+
+</section>
+
+### Grid of Artbreeder images
+
+Let's try out the image-of-images technique with some Artbreeder images:
+
+```python
+def image_from_dat(d):
+  noise_vector, class_vector, truncation = parse_dat(d)
+  images, _ = generate_images(noise_vector, class_vector, truncation)
+  # images, _ = gen_hacked(noise_vector, class_vector, truncation, -1, lambda z: z)
+  return to_pil_image(torchvision.utils.make_grid(images) * 0.5 + 0.5)
+
+def combine_dats(dats):
+  dats = [parse_dat(d) for d in dats]
+  # put vectors together in a tensor
+  noise_vector = torch.cat([torch.tensor(d[0], device=device) for d in dats], axis=0)
+  class_vector = torch.cat([torch.tensor(d[1], device=device) for d in dats], axis=0)
+  # tructations = [dats[2] for d in dats]
+  # unfortunately, we can't really suport varying truncation
+  truncation = 1.0
+  return noise_vector, class_vector, truncation
+  
+truncation_0_urls = [
+  "https://artbreeder.com/i?k=83b5f5830c1ad242c50d",
+  "https://artbreeder.com/i?k=f2e1017f7ffb96e54bae",
+  "https://artbreeder.com/i?k=eed2b029b6afc8ae8811",
+  "https://artbreeder.com/i?k=5f0c4d1383d29b916b74",
+]
+
+def image_from_dat_urls(urls, layer_to_hack=1, hack_layer=pack_image_grid, use_index=2):
+  dats = [dat_from_url(u) for u in urls]
+  noise_vector, class_vector, truncation = combine_dats(dats)
+  images = gen_hacked(noise_vector, class_vector, truncation, layer_to_hack, hack_layer, use_index=use_index)
+  return to_pil_image(torchvision.utils.make_grid(images.cpu()) * 0.5 + 0.5)
+
+image_from_dat_urls(truncation_0_urls)
+```
+
+![Image of images with artbreeder](images/gan-hacking/artbreeder/image-of-images-83b5f5830c1ad242c50d-pytorch.jpg)
+
+Let's look at some more examples:
+
+```python
+image_from_dat_urls([
+  "https://artbreeder.com/i?k=83b019631b4c0731d7cb",
+  "https://artbreeder.com/i?k=f70a45d5a03b99b26bb7",
+  "https://artbreeder.com/i?k=80cad16367f23afed466",
+  "https://artbreeder.com/i?k=2068a7cb3958e848c8e4",
+], layer_to_hack=1, hack_layer=lambda z: pack_image_grid_mixed(z, big_idx=3), use_index=3)
+```
+
+![Image of images with artbreeder](images/gan-hacking/artbreeder/image-of-images-2068a7cb3958e848c8e4.jpg)
+
+```python
+image_from_dat_urls([
+  "https://artbreeder.com/i?k=ce835203d6b54e8f2d82",
+  "https://artbreeder.com/i?k=e3986c7ca685164f96f1",
+  "https://artbreeder.com/i?k=51cf04984fd6ee9186ef",
+  "https://artbreeder.com/i?k=57f86c34be3b8e93d083",
+  
+  "https://artbreeder.com/i?k=4277d34796c6d93fdaa2",
+  "https://artbreeder.com/i?k=b507c06d2987c31464af",
+  "https://artbreeder.com/i?k=97a1969fd47aaeea605b",
+  "https://artbreeder.com/i?k=c8167713f4a74279fa1a",
+], layer_to_hack=0, hack_layer=lambda z: pack_image_grid_mixed(z, chop=(4,2), big_idx=0), use_index=0)
+```
+
+![Image of images with artbreeder](images/gan-hacking/artbreeder/image-of-images-ce835203d6b54e8f2d82.jpg)
+
+Throwing an upscale in there as well (different source image):
+
+![](images/gan-hacking/artbreeder/smear.jpg)
+
+
+## Conclusion
+
+By treating a generative neural network as a program that can be hacked, rather than a black box opens up new creative opportunities for experimentation.
+
+I hope to see some more interesting work!
