--- a/src/_posts/2020-03-03-gan-hacking.mdx
+++ b/src/_posts/2020-03-03-gan-hacking.mdx
@@ -869,7 +869,9 @@ Throwing an upscale in there as well (different source image):
 
 ![](images/gan-hacking/artbreeder/smear.jpg)
 
+## Future directions
 
+Currently, the size of the output is limited by the amount of RAM on the GPU that I'm using. On colab, you will be randomly assigned GPUs with 8 or 12 GB, which allow maybe ~12 images to be combined (though sometimes they )
 
 ## Conclusion
 
